Последние правки верстки

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,10 +12,23 @@
   <main class="portfolio-page">
     <section id="portfolio-grid" class="portfolio-grid">
       <div class="portfolio-grid__container">
-      <a href="album.html" class="portfolio-item">Альбом #1</a>
-      <a href="album2.html" class="portfolio-item">Альбом #2</a>
-      <a href="album3.html" class="portfolio-item">Альбом #3</a>
-      <a href="album4.html" class="portfolio-item">Альбом #4</a>
+        <div class="portfolio-item">
+          <title class="portfolio-">Заголовок #1</title>
+          <a href="index.html" class="portfolio-item__link">Главная</a>
+      <a href="album.html" class="portfolio-item__link">Альбом #1</a>
+      </div>
+      <div class="portfolio-item">
+          <a href="index.html" class="portfolio-item__link">Главная</a>
+      <a href="album2.html" class="portfolio-item__link">Альбом #2</a>
+      </div>
+      <div class="portfolio-item">
+          <a href="index.html" class="portfolio-item__link">Главная</a>
+      <a href="album3.html" class="portfolio-item__link">Альбом #3</a>
+      </div>
+      <div class="portfolio-item">
+          <a href="index.html" class="portfolio-item__link">Главная</a>
+      <a href="album4.html" class="portfolio-item__link">Альбом #4</a>
+      </div>
       </div>
     </section>
   </main>
