chore: перенес проект в portfolio-project, удалены лишние изображения

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,22 +12,23 @@
   <main class="portfolio-page">
     <section id="portfolio-grid" class="portfolio-grid">
       <div class="portfolio-grid__container">
+        <div class="portfolio-item__container-item">
+          <h1 class="portfolio-title">Album Name #1</h1>  
         <div class="portfolio-item">
-          <title class="portfolio-">Заголовок #1</title>
-          <a href="index.html" class="portfolio-item__link">Главная</a>
-      <a href="album.html" class="portfolio-item__link">Альбом #1</a>
+      <a href="album.html" class="portfolio-item__link"><img src="/img/img-album-1.jpg" alt="album"></a>
       </div>
-      <div class="portfolio-item">
-          <a href="index.html" class="portfolio-item__link">Главная</a>
-      <a href="album2.html" class="portfolio-item__link">Альбом #2</a>
       </div>
-      <div class="portfolio-item">
-          <a href="index.html" class="portfolio-item__link">Главная</a>
-      <a href="album3.html" class="portfolio-item__link">Альбом #3</a>
+              <div class="portfolio-item__container-item">
+          <h1 class="portfolio-title">Album Name #2</h1>  
+        <div class="portfolio-item">
+      <a href="album.html" class="portfolio-item__link"><img src="/img/img-album-2.jpg" alt="album"></a>
       </div>
-      <div class="portfolio-item">
-          <a href="index.html" class="portfolio-item__link">Главная</a>
-      <a href="album4.html" class="portfolio-item__link">Альбом #4</a>
+      </div>
+              <div class="portfolio-item__container-item">
+          <h1 class="portfolio-title">Album Name #3</h1>  
+        <div class="portfolio-item">
+      <a href="album.html" class="portfolio-item__link"><img src="/img/img-album-3.jpg" alt="album"></a>
+      </div>
       </div>
       </div>
     </section>
