--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/media.css">
-    <script src="js/swiper-bundle.min.js" defer></script>
-    <script src="/js/script.js" defer></script>
-    <script src="/js/contacts-modal.js" defer></script>
+    <script defer src="js/swiper-bundle.min.js"></script>
+    <script defer src="js/sanity-feed.js"></script>
+    <script defer src="/js/script.js"></script>
+    <script defer src="/js/contacts-modal.js"></script>
 </head>
 
 <body>
