--- a/portfolio.html
+++ b/portfolio.html
@@ -1,37 +1,51 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Портфолио</title>
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/media.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Портфолио</title>
+  <link rel="stylesheet" href="/css/normalize.css" />
+  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="/css/media.css" />
+  <!-- важно: подключаем наш мост к Sanity -->
+  <script defer src="/js/sanity-feed.js"></script>
 </head>
+
 <body>
   <main class="portfolio-page">
     <section id="portfolio-grid" class="portfolio-grid">
       <div class="portfolio-grid__container">
+        <!-- Заглушки можно оставить — скрипт очистит и подставит альбомы из Sanity -->
         <div class="portfolio-item__container-item">
-          <h1 class="portfolio-title">Album Name #1</h1>  
-        <div class="portfolio-item">
-      <a href="album.html" class="portfolio-item__link"><img src="/img/img-album-1.jpg" alt="album"></a>
-      </div>
-      </div>
-              <div class="portfolio-item__container-item">
-          <h1 class="portfolio-title">Album Name #2</h1>  
-        <div class="portfolio-item">
-      <a href="album.html" class="portfolio-item__link"><img src="/img/img-album-2.jpg" alt="album"></a>
-      </div>
-      </div>
-              <div class="portfolio-item__container-item">
-          <h1 class="portfolio-title">Album Name #3</h1>  
-        <div class="portfolio-item">
-      <a href="album.html" class="portfolio-item__link"><img src="/img/img-album-3.jpg" alt="album"></a>
-      </div>
-      </div>
+          <h1 class="portfolio-title">Album Name #1</h1>
+          <div class="portfolio-item">
+            <a href="album.html" class="portfolio-item__link">
+              <img src="/img/img-album-1.jpg" alt="album" />
+            </a>
+          </div>
+        </div>
+
+        <div class="portfolio-item__container-item">
+          <h1 class="portfolio-title">Album Name #2</h1>
+          <div class="portfolio-item">
+            <a href="album.html" class="portfolio-item__link">
+              <img src="/img/img-album-2.jpg" alt="album" />
+            </a>
+          </div>
+        </div>
+
+        <div class="portfolio-item__container-item">
+          <h1 class="portfolio-title">Album Name #3</h1>
+          <div class="portfolio-item">
+            <a href="album.html" class="portfolio-item__link">
+              <img src="/img/img-album-3.jpg" alt="album" />
+            </a>
+          </div>
+        </div>
       </div>
     </section>
   </main>
 </body>
+
 </html>
