--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <title>web-site Natalia Mazina</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/media.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/media.css" />
 
     <!-- JS -->
-    <script src="js/swiper-bundle.min.js" defer></script>
-    <script src="js/sanity-feed.js" defer></script>
-    <script src="js/script.js" defer></script>
-    <script src="js/contacts-modal.js" defer></script>
+    <script src="./js/swiper-bundle.min.js" defer></script>
+    <script src="./js/sanity-feed.js" defer></script>
+    <script src="./js/script.js" defer></script>
+    <script src="./js/contacts-modal.js" defer></script>
   </head>
 
   <body>
