Обновил пути во всех файлах во всех link и script

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Портфолио</title>
-  <link rel="stylesheet" href="/css/normalize.css" />
-  <link rel="stylesheet" href="/css/styles.css" />
-  <link rel="stylesheet" href="/css/media.css" />
+  <link rel="stylesheet" href="./css/normalize.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/media.css" />
   <!-- важно: подключаем наш мост к Sanity -->
-  <script defer src="/js/sanity-feed.js"></script>
+  <script defer src="./js/sanity-feed.js"></script>
 </head>
 
 <body>
