--- a/album.html
+++ b/album.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Альбом</title>
-    <link rel="stylesheet" href="/css/normalize.css" />
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/media.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/media.css" />
     <!-- мост к Sanity -->
-    <script defer src="/js/sanity-feed.js"></script>
+    <script defer src="./js/sanity-feed.js"></script>
 </head>
 
 <body>
