--- a/contacts.html
+++ b/contacts.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -11,4 +11,4 @@
 <body>
     
 </body>
-</html>
+</html> -->
