--- a/portfolio.html
+++ b/portfolio.html
@@ -16,33 +16,7 @@
   <main class="portfolio-page">
     <section id="portfolio-grid" class="portfolio-grid">
       <div class="portfolio-grid__container">
-        <!-- Заглушки можно оставить — скрипт очистит и подставит альбомы из Sanity -->
-        <div class="portfolio-item__container-item">
-          <h1 class="portfolio-title">Album Name #1</h1>
-          <div class="portfolio-item">
-            <a href="album.html" class="portfolio-item__link">
-              <img src="/img/img-album-1.jpg" alt="album" />
-            </a>
-          </div>
-        </div>
-
-        <div class="portfolio-item__container-item">
-          <h1 class="portfolio-title">Album Name #2</h1>
-          <div class="portfolio-item">
-            <a href="album.html" class="portfolio-item__link">
-              <img src="/img/img-album-2.jpg" alt="album" />
-            </a>
-          </div>
-        </div>
-
-        <div class="portfolio-item__container-item">
-          <h1 class="portfolio-title">Album Name #3</h1>
-          <div class="portfolio-item">
-            <a href="album.html" class="portfolio-item__link">
-              <img src="/img/img-album-3.jpg" alt="album" />
-            </a>
-          </div>
-        </div>
+        <!-- скрипт очистит и подставит альбомы из Sanity -->
       </div>
     </section>
   </main>
