Добавлен спиннер для страницы с альбомами

--- a/album.html
+++ b/album.html
@@ -14,22 +14,19 @@
 
 <body>
     <main class="album-page">
-        <section class="album-header">
-            <div class="container">
-                <h1 id="album-title" class="portfolio-title">Загрузка…</h1>
-            </div>
-        </section>
+  <section class="album-header">
+    <div class="container">
+      <h1 id="album-title" class="portfolio-title"></h1>
+    </div>
+  </section>
 
-        <section class="album-gallery">
-            <div class="container">
-                <!-- сюда скрипт подставит фото -->
-                <div id="album-photos" class="album-photos-grid">
-                    <!-- скелетон можно оставить; скрипт заменит содержимое -->
-                    <p style="opacity:.7; text-align:center; padding:24px;">Загрузка фотографий…</p>
-                </div>
-            </div>
-        </section>
-    </main>
+<section class="album-gallery">
+  <div class="container">
+    <div id="album-photos" class="album-photos-grid"></div>
+  </div>
+</section>
+</main>
+
 </body>
 
 </html>
