--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="header__socials">
           <ul class="list-reset header__social-list">
             <li class="header__social-item">
-              <a href="#" class="header__social-link" aria-label="VK">
+              <a href="https://vk.ru/" class="header__social-link" aria-label="VK">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="24"
@@ -69,7 +69,7 @@
             </li>
 
             <li class="header__social-item">
-              <a href="#" class="header__social-link" aria-label="Instagram">
+              <a href="https://instagram.com/" class="header__social-link" aria-label="Instagram">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="24"
@@ -98,7 +98,7 @@
             </li>
 
             <li class="header__social-item">
-              <a href="#" class="header__social-link" aria-label="Telegram">
+              <a href="https://telegram.com/" class="header__social-link" aria-label="Telegram">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="24"
@@ -216,8 +216,8 @@
             </div>
 
             <div class="contacts__socials">
-              <a href="#" aria-label="VK" class="social-link">
-                <svg
+              <a href="https://vk.ru/" aria-label="VK" class="social-link">
+               <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="24"
                   height="24"
@@ -229,7 +229,8 @@
                   <path
                     fill="currentColor"
                     fill-rule="evenodd"
-                    d="M23.405 16.865a11.4 11.4 0 0 0-2.123-2.964a16 16 0 0 0-.905-.94l-.038-.037a19 19 0 0 1-.346-.344a29.7 29.7 0 0 0 3.01-5.238l.033-.074l.023-.078c.109-.363.233-1.053-.207-1.677c-.456-.644-1.185-.76-1.674-.76h-2.247a2.23 2.23 0 0 0-2.19 1.442a17.5 17.5 0 0 1-1.806 3.271V6.833c0-.34-.032-.91-.397-1.39c-.436-.576-1.067-.69-1.505-.69H9.467a1.813 1.813 0 0 0-1.85 1.682l-.003.045v.045c0 .485.192.843.346 1.068c.069.101.142.193.189.251l.01.013c.05.062.083.103.116.149c.088.118.213.302.249.776v1.473a19.8 19.8 0 0 1-1.751-3.792l-.008-.022l-.008-.021c-.122-.319-.317-.783-.708-1.137c-.456-.415-.996-.53-1.487-.53h-2.28c-.497 0-1.096.116-1.543.587C.3 5.804.25 6.36.25 6.654v.134l.028.13a19.4 19.4 0 0 0 3.801 8.02a10.15 10.15 0 0 0 7.893 4.692l.041.003h.042c.726 0 1.483-.063 2.052-.442c.767-.512.828-1.297.828-1.689v-1.138c.197.16.441.374.74.662c.362.362.65.676.897.95l.132.146c.192.214.381.425.553.598c.216.217.483.456.817.633c.363.191.744.278 1.148.278h2.281c.481 0 1.17-.114 1.655-.676c.528-.612.488-1.363.322-1.902l-.03-.097zm-5.72.106a26 26 0 0 0-.957-1.014l-.003-.003c-1.357-1.308-1.99-1.535-2.438-1.535c-.239 0-.502.026-.673.24a.8.8 0 0 0-.147.348a2.5 2.5 0 0 0-.032.444v2.051c0 .255-.042.362-.16.44c-.157.105-.492.19-1.211.19a8.65 8.65 0 0 1-6.752-4.052l-.008-.013l-.01-.012A17.9 17.9 0 0 1 1.75 6.63c.004-.13.032-.209.078-.257c.047-.05.162-.12.454-.12h2.28c.253 0 .385.056.48.141c.106.098.2.263.312.557c.56 1.646 1.316 3.186 2.033 4.318c.358.565.71 1.036 1.028 1.369c.159.166.314.304.463.402c.143.094.306.169.474.169c.088 0 .191-.01.29-.053a.52.52 0 0 0 .25-.232c.103-.188.132-.465.132-.828V8.723c-.053-.818-.3-1.279-.54-1.606a6 6 0 0 0-.15-.193l-.013-.016a3 3 0 0 1-.122-.16a.4.4 0 0 1-.085-.214a.313.313 0 0 1 .324-.282h3.595c.206 0 .275.05.31.097c.05.065.092.2.092.484v4.528c0 .538.248.902.608.902c.414 0 .713-.251 1.235-.773l.009-.01l.008-.009a19 19 0 0 0 2.84-4.722l.004-.012a.73.73 0 0 1 .74-.485h2.3c.312 0 .414.08.448.127c.035.05.06.157 0 .367a28.2 28.2 0 0 1-3.029 5.2l-.008.012c-.115.177-.242.373-.26.597c-.02.242.084.461.267.697c.133.196.408.465.687.738l.026.026c.292.286.609.596.863.896l.007.007l.007.008a9.9 9.9 0 0 1 1.865 2.586c.076.26.03.394-.03.463c-.069.08-.224.155-.518.155H8.23a.9.9 0 0 1-.447-.105a2 2 0 0 1-.454-.364c-.143-.143-.298-.316-.488-.527z"
+                    d="M23.405 16.865a11.4 11.4 0 0 0-2.123-2.964a16 16 0 0 0-.905-.94l-.038-.037a19 19 0 0 1-.346-.344a29.7 29.7 0 0 0 3.01-5.238l.033-.074l.023-.078c.109-.363.233-1.053-.207-1.677c-.456-.644-1.185-.76-1.674-.76h-2.247a2.23 2.23 0 0 0-2.19 1.442a17.5 17.5 0 0 1-1.806 3.271V6.833c0-.34-.032-.91-.397-1.39c-.436-.576-1.067-.69-1.505-.69H9.467a1.813 1.813 0 0 0-1.85 1.682l-.003.045v.045c0 .485.192.843.346 1.068c.069.101.142.193.189.251l.01.013c.05.062.083.103.116.149c.088.118.213.302.249.776v1.473a19.8 19.8 0 0 1-1.751-3.792l-.008-.022l-.008-.021c-.122-.319-.317-.783-.708-1.137c-.456-.415-.996-.53-1.487-.53h-2.28c-.497 0-1.096.116-1.543.587C.3 5.804.25 6.36.25 6.654v.134l.028.13a19.4 19.4 0 0 0 3.801 8.02a10.15 10.15 0 0 0 7.893 4.692l.041.003h.042c.726 0 1.483-.063 2.052-.442c.767-.512.828-1.297.828-1.689v-1.138c.197.16.441.374.74.662c.362.362.65.676.897.95l.132.146c.192.214.381.425.553.598c.216.217.483.456.817.633c.363.191.744.278 1.148.278h2.281c.481 0 1.17-.114 1.655-.676c.528-.612.488-1.363.322-1.902l-.03-.097zm-5.72.106a26 26 0 0 0-.957-1.014l-.003-.003c-1.357-1.308-1.99-1.535-2.438-1.535c-.239 0-.502.026-.673.24a.8.8 0 0 0-.147.348a2.5 2.5 0 0 0-.032.444v2.051c0 .255-.042.362-.16.44c-.157.105-.492.19-1.211.19a8.65 8.65 0 0 1-6.752-4.052l-.008-.013l-.01-.012A17.9 17.9 0 0 1 1.75 6.63c.004-.13.032-.209.078-.257c.047-.05.162-.12.454-.12h2.28c.253 0 .385.056.48.141c.106.098.2.263.312.557c.56 1.646 1.316 3.186 2.033 4.318c.358.565.71 1.036 1.028 1.369c.159.166.314.304.463.402c.143.094.306.169.474.169c.088 0 .191-.01.29-.053a.52.52 0 0 0 .25-.232c.103-.188.132-.465.132-.828V8.723c-.053-.818-.3-1.279-.54-1.606a6 6 0 0 0-.15-.193l-.013-.016a3 3 0 0 1-.122-.16a.4.4 0 0 1-.085-.214a.313.313 0 0 1 .324-.282h3.595c.206 0 .275.05.31.097c.05.065.092.2.092.484v4.528c0 .538.248.902.608.902c.414 0 .713-.251 1.235-.773l.009-.01l.008-.009a19 19 0 0 0 2.84-4.722l.004-.012a.73.73 0 0 1 .74-.485h2.3c.312 0 .414.08.448.127c.035.05.06.157 0 .367a28.2 28.2 0 0 1-3.029 5.2l-.008.012c-.115.177-.242.373-.26.597c-.02.242.084.461.267.697c.133.196.408.465.687.738l.026.026c.292.286.609.596.863.896l.007.007l.007.008a9.9 9.9 0 0 1 1.865 2.586c.076.26.03.394-.03.463c-.069.08-.224.155-.518.155h-2.282a.9.9 0 0 1-.447-.105a2 2 0 0 1-.454-.364c-.143-.143-.298-.316-.488-.527z"
+                    clip-rule="evenodd"
                   />
                 </svg>
                 <span class="contacts__social-text"
@@ -238,7 +239,7 @@
               </a>
 
               <a
-                href="#"
+                href="https://instagram.com/"
                 aria-label="Instagram"
                 class="social-link social-link--instagram"
               >
@@ -272,7 +273,7 @@
                 >
               </a>
 
-              <a href="#" aria-label="Telegram" class="social-link">
+              <a href="https://telegram.com/" aria-label="Telegram" class="social-link">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="24"
