--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="img/img-1.jpg" alt="Слайд 1" />
+                <!-- <img src="img/img-1.jpg" alt="Слайд 1" /> -->
               </div>
               <div class="swiper-slide">
-                <img src="img/img-2.jpg" alt="Слайд 2" />
+                <!-- <img src="img/img-2.jpg" alt="Слайд 2" /> -->
               </div>
               <div class="swiper-slide">
-                <img src="img/img-3.jpg" alt="Слайд 3" />
+                <!-- <img src="img/img-3.jpg" alt="Слайд 3" /> -->
               </div>
             </div>
           </div>
