Изменили главную на моб версии

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="./js/contacts-modal.js" defer></script>
   </head>
 
-  <body>
+  <body class="page-home">
     <!-- HEADER -->
     <header class="header header__container">
       <div class="header__logo">
@@ -141,6 +141,13 @@
           </div>
         </div>
       </section>
+            <!-- PORTFOLIO GRID (для планшетов/мобил) -->
+      <section id="portfolio-grid" class="portfolio-grid" aria-label="Альбомы">
+        <div class="portfolio-grid__container">
+          <!-- sanity-feed.js отрисует сюда карточки альбомов -->
+        </div>
+      </section>
+
     </main>
 
     <!-- FOOTER -->
