--- a/album.html
+++ b/album.html
@@ -14,9 +14,12 @@
 
 <body>
     <main class="album-page">
+          <header class="header">
+      <a class="portfolio-header__link" href="index.html">Natalia Mazina</a>
+    </header>
   <section class="album-header">
     <div class="container">
-      <h1 id="album-title" class="portfolio-title"></h1>
+      <!-- <h1 id="album-title" class="portfolio-title"></h1> -->
     </div>
   </section>
 
