--- a/album.html
+++ b/album.html
@@ -13,10 +13,11 @@
 </head>
 
 <body>
-    <main class="album-page">
-          <header class="header">
-      <a class="portfolio-header__link" href="index.html">Natalia Mazina</a>
+  <header class="header">
+      <a class="album-header__link" href="index.html">Natalia Mazina</a>
     </header>
+    <main class="album-page">
+          
   <section class="album-header">
     <div class="container">
       <!-- <h1 id="album-title" class="portfolio-title"></h1> -->
@@ -29,7 +30,25 @@
   </div>
 </section>
 </main>
+    <!-- FOOTER -->
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__logo">
+          <span class="footer__pretitle">Photographer</span>
+          <h2 class="footer__title">Natalia Mazina</h2>
+        </div>
 
+        <div class="footer__block-bot">
+          <span class="footer__text footer__text--top">
+            2007-2025 Natalia Mazina©. Все права защищены.
+          </span>
+          <span class="footer__text footer__text--bot">
+            Meta* (продукты Facebook* и Instagram*) признана экстремистской
+            организацией на территории Российской Федерации.
+          </span>
+        </div>
+      </div>
+    </footer>
 </body>
 
 </html>
