--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+  <header class="header">
+      <a class="portfolio-header__link" href="index.html">Natalia Mazina</a>
+    </header>
   <main class="portfolio-page">
     <section id="portfolio-grid" class="portfolio-grid">
       <div class="portfolio-grid__container">
