--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>web-site Natalia Mazina</title>
+    <title>Natalia Mazina</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="./css/normalize.css" />
